--- a/.gitignore
+++ b/.gitignore
@@ -76,7 +76,7 @@ fabric.properties
 *.d
 
 # Object files
-#**.o
+**.o
 **.ko
 **.obj
 **.elf
@@ -179,7 +179,7 @@ CMakeCache.txt
 CMakeFiles
 CMakeScripts
 Testing
-Makefile
+#Makefile
 cmake_install.cmake
 install_manifest.txt
 compile_commands.json
