excluded makefile.local and .custom

--- a/Source/THO5/Lasergame/.gitignore
+++ b/Source/THO5/Lasergame/.gitignore
@@ -740,3 +740,5 @@ bmptk_fixed_size_stack.c
 
 # project files to exclude
 libs/bmptk/Makefile.inc
+libs/bmptk/Makefile.local
+libs/bmptk/Makefile.custom
