--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ Source/THO5/Lasergame/src/ir/runGame.hpp
 Source/THO5/Lasergame/src/RunGameController.hpp
 Source/THO5/Lasergame/src/RunGameController.cpp
 Source/THO5/cmake-build-Debug/
+Source/THO5/Lasergame/libs/bmptk/Makefile.custom
+Source/THO5/Lasergame/libs/bmptk/Makefile.inc
+Source/THO5/Lasergame/Makefile
