--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ Source/THO5/Lasergame/src/RunGameController.cpp
 Source/THO5/cmake-build-Debug/
 Source/THO5/Lasergame/libs/bmptk/Makefile.custom
 Source/THO5/Lasergame/libs/bmptk/Makefile.inc
+Source/THO5/Lasergame/Makefile
+*.workspace
