Revert "Did stuff"
This reverts commit 5d9590eaf789bc44b682301875fd184bb9039e94.

--- a/Source/THO5/Lasergame/Makefile
+++ b/Source/THO5/Lasergame/Makefile
@@ -29,8 +29,8 @@ HEADERS           += rtos.hpp
 SOURCES           += rtos.cpp
 
 # the source and header files
-#HEADERS				+= OLEDBoundary.hpp
-#SOURCES				+= OLEDBoundary.cpp
+HEADERS				+= OLEDBoundary.hpp
+SOURCES				+= OLEDBoundary.cpp
 
 SEARCH				+= ./src/ir/
 HEADERS				+= receiverController.hpp
