--- a/Source/THO5/Lasergame/Makefile
+++ b/Source/THO5/Lasergame/Makefile
@@ -37,6 +37,11 @@ SOURCES			+= src/KeypadController.cpp
 HEADERS			+= src/InitGameController.hpp
 SOURCES			+= src/InitGameController.cpp
 
+HEADERS			+=src/KeypadListener.hpp
+
+HEADERS			+=src/SpeakerController.hpp
+SOURCES			+=src/SpeakerController.cpp
+
 # the source and header files
 #HEADERS				+= OLEDBoundary.hpp
 #SOURCES				+= OLEDBoundary.cpp
