--- a/Source/THO5/Lasergame/Lasergame.project
+++ b/Source/THO5/Lasergame/Lasergame.project
@@ -31,9 +31,9 @@
         <File Name="src/ir/gameParameters.hpp"/>
         <File Name="src/ir/messageLogic.hpp"/>
         <File Name="src/ir/receiverController.hpp"/>
-        <File Name="src/ir/runGame.hpp"/>
         <File Name="src/ir/transmitter.hpp"/>
         <File Name="src/ir/transmitterController.hpp"/>
+        <File Name="src/ir/game.hpp"/>
       </VirtualDirectory>
       <File Name="src/KeypadListener.hpp"/>
       <File Name="src/KeypadController.cpp"/>
@@ -146,7 +146,7 @@
       </Compiler>
       <Linker Options="-O2" Required="yes"/>
       <ResourceCompiler Options="" Required="no"/>
-      <General OutputFile="" IntermediateDirectory="./Release" Command="bmptk-make" CommandArguments="run" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
+      <General OutputFile="" IntermediateDirectory="./Release" Command="mingw32-make" CommandArguments="run" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
       <BuildSystem Name="CMake"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
@@ -161,7 +161,7 @@
       <CustomBuild Enabled="yes">
         <RebuildCommand>mingw32-make clean build</RebuildCommand>
         <CleanCommand>mingw32-make build clean</CleanCommand>
-        <BuildCommand>bmptk-make build</BuildCommand>
+        <BuildCommand>mingw32-make build</BuildCommand>
         <PreprocessFileCommand/>
         <SingleFileCommand/>
         <MakefileGenerationCommand/>
