implementatie van InitGame

--- a/Source/THO5/Lasergame/Lasergame.project
+++ b/Source/THO5/Lasergame/Lasergame.project
@@ -34,7 +34,12 @@
         <File Name="src/ir/transmitter.hpp"/>
         <File Name="src/ir/transmitterController.hpp"/>
         <File Name="src/ir/game.hpp"/>
-        <File Name="src/game.cpp"/>
+        <File Name="src/ir/messageLogic.cpp"/>
+        <File Name="src/ir/receiverController.cpp"/>
+        <File Name="src/ir/runGame.hpp"/>
+        <File Name="src/ir/transmitter.cpp"/>
+        <File Name="src/ir/transmitterController.cpp"/>
+        <File Name="src/ir/game.cpp"/>
       </VirtualDirectory>
       <File Name="src/KeypadListener.hpp"/>
       <File Name="src/KeypadController.cpp"/>
