--- a/Source/THO5/Lasergame/Lasergame.project
+++ b/Source/THO5/Lasergame/Lasergame.project
@@ -35,6 +35,7 @@
         <File Name="src/ir/transmitterController.hpp"/>
         <File Name="src/ir/game.hpp"/>
         <File Name="src/game.cpp"/>
+        <File Name="src/ir/receiverController.cpp"/>
       </VirtualDirectory>
       <File Name="src/KeypadListener.hpp"/>
       <File Name="src/KeypadController.cpp"/>
@@ -44,6 +45,7 @@
       <File Name="src/GameParamsController.hpp"/>
       <File Name="src/GameParamsController.cpp"/>
       <File Name="src/KeyConsumer.h"/>
+      <File Name="src/ReceiveListener.hpp"/>
     </VirtualDirectory>
     <VirtualDirectory Name="libs">
       <VirtualDirectory Name="hwlib">
