--- a/Source/THO5/Lasergame/Lasergame.project
+++ b/Source/THO5/Lasergame/Lasergame.project
@@ -1,101 +1,90 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<CodeLite_Project Name="LaserGame" Version="10.0.0" InternalType="">
+<CodeLite_Project Name="Lasergame" Version="10.0.0" InternalType="">
   <Plugins>
     <Plugin Name="qmake">
-      <![CDATA[00020001N0005Debug0000000000000001N0007Release000000000000]]>
+      <![CDATA[00010001N0007Release000000000000]]>
     </Plugin>
   </Plugins>
-  <Reconciliation>
-    <Regexes/>
-    <Excludepaths/>
-    <Ignorefiles/>
-    <Extensions>
-      <![CDATA[cpp;c;h;hpp;xrc;wxcp;fbp]]>
-    </Extensions>
-    <Topleveldir>../LaserGame</Topleveldir>
-  </Reconciliation>
-  <Description/>
-  <Dependencies/>
-  <VirtualDirectory Name="LaserGame">
-    <File Name="Makefile"/>
-    <VirtualDirectory Name="src">
-      <File Name="src/main.cpp"/>
-      <File Name="src/OLEDBoundary.hpp"/>
-      <File Name="src/OLEDBoundary.cpp"/>
-      <File Name="src/RunGameController.cpp"/>
-      <File Name="src/RunGameController.hpp"/>
-      <File Name="src/InitGameController.hpp"/>
-      <File Name="src/InitGameController.cpp"/>
-      <File Name="src/defines.h"/>
-      <VirtualDirectory Name="ir">
-        <File Name="src/ir/gameParameters.hpp"/>
-        <File Name="src/ir/messageLogic.hpp"/>
-        <File Name="src/ir/receiverController.hpp"/>
-        <File Name="src/ir/transmitter.hpp"/>
-        <File Name="src/ir/transmitterController.hpp"/>
-        <File Name="src/ir/game.hpp"/>
-        <File Name="src/ir/messageLogic.cpp"/>
-        <File Name="src/ir/receiverController.cpp"/>
-        <File Name="src/ir/runGame.hpp"/>
-        <File Name="src/ir/transmitter.cpp"/>
-        <File Name="src/ir/transmitterController.cpp"/>
-        <File Name="src/ir/game.cpp"/>
-      </VirtualDirectory>
-      <File Name="src/KeypadListener.hpp"/>
-      <File Name="src/KeypadController.cpp"/>
-      <File Name="src/KeypadController.hpp"/>
-      <File Name="src/SpeakerController.cpp"/>
-      <File Name="src/SpeakerController.hpp"/>
-      <File Name="src/GameParamsController.hpp"/>
-      <File Name="src/GameParamsController.cpp"/>
-      <File Name="src/KeyConsumer.h"/>
+  <VirtualDirectory Name="src">
+    <VirtualDirectory Name="ir">
+      <File Name="src/ir/game.cpp"/>
+      <File Name="src/ir/game.hpp"/>
+      <File Name="src/ir/gameParameters.hpp"/>
+      <File Name="src/ir/messageLogic.cpp"/>
+      <File Name="src/ir/messageLogic.hpp"/>
+      <File Name="src/ir/receiverController.cpp"/>
+      <File Name="src/ir/receiverController.hpp"/>
+      <File Name="src/ir/runGame.hpp"/>
+      <File Name="src/ir/transmitter.cpp"/>
+      <File Name="src/ir/transmitter.hpp"/>
+      <File Name="src/ir/transmitterController.cpp"/>
+      <File Name="src/ir/transmitterController.hpp"/>
     </VirtualDirectory>
-    <VirtualDirectory Name="libs">
-      <VirtualDirectory Name="hwlib">
-        <File Name="libs/hwlib/hwlib.cpp"/>
-        <File Name="libs/hwlib/hwlib.hpp"/>
-        <File Name="libs/hwlib/hwlib-adc.hpp"/>
-        <File Name="libs/hwlib/hwlib-all.hpp"/>
-        <File Name="libs/hwlib/hwlib-console.hpp"/>
-        <File Name="libs/hwlib/hwlib-dac.hpp"/>
-        <File Name="libs/hwlib/hwlib-db103.hpp"/>
-        <File Name="libs/hwlib/hwlib-defines.hpp"/>
-        <File Name="libs/hwlib/hwlib-demo.hpp"/>
-        <File Name="libs/hwlib/hwlib-doxygen.hpp"/>
-        <File Name="libs/hwlib/hwlib-due.hpp"/>
-        <File Name="libs/hwlib/hwlib-due-system-sam3xa.hpp"/>
-        <File Name="libs/hwlib/hwlib-font-default-8x8.hpp"/>
-        <File Name="libs/hwlib/hwlib-font-default-16x16.hpp"/>
-        <File Name="libs/hwlib/hwlib-glcd-5510.hpp"/>
-        <File Name="libs/hwlib/hwlib-glcd-oled.hpp"/>
-        <File Name="libs/hwlib/hwlib-graphics.hpp"/>
-        <File Name="libs/hwlib/hwlib-hc595.hpp"/>
-        <File Name="libs/hwlib/hwlib-hd44780.hpp"/>
-        <File Name="libs/hwlib/hwlib-i2c.hpp"/>
-        <File Name="libs/hwlib/hwlib-matrix-keypad.hpp"/>
-        <File Name="libs/hwlib/hwlib-ostream.hpp"/>
-        <File Name="libs/hwlib/hwlib-panic.cpp"/>
-        <File Name="libs/hwlib/hwlib-panic.hpp"/>
-        <File Name="libs/hwlib/hwlib-pcf8574a.hpp"/>
-        <File Name="libs/hwlib/hwlib-pcf8591.hpp"/>
-        <File Name="libs/hwlib/hwlib-pi.hpp"/>
-        <File Name="libs/hwlib/hwlib-pin.hpp"/>
-        <File Name="libs/hwlib/hwlib-pin-dummies.hpp"/>
-        <File Name="libs/hwlib/hwlib-port.hpp"/>
-        <File Name="libs/hwlib/hwlib-spi.hpp"/>
-        <File Name="libs/hwlib/hwlib-uno.hpp"/>
-        <File Name="libs/hwlib/hwlib-wait.hpp"/>
-      </VirtualDirectory>
-      <VirtualDirectory Name="rtos">
-        <File Name="libs/rtos/coroutine.cpp"/>
-        <File Name="libs/rtos/coroutine.hpp"/>
-        <File Name="libs/rtos/rtos.cpp"/>
-        <File Name="libs/rtos/rtos.hpp"/>
-        <File Name="libs/rtos/switch_to.asm"/>
-        <File Name="libs/rtos/switch_to.hpp"/>
-      </VirtualDirectory>
+    <File Name="src/defines.h"/>
+    <File Name="src/GameParamsController.cpp"/>
+    <File Name="src/GameParamsController.hpp"/>
+    <File Name="src/InitGameController.cpp"/>
+    <File Name="src/InitGameController.hpp"/>
+    <File Name="src/KeyConsumer.h"/>
+    <File Name="src/KeypadController.cpp"/>
+    <File Name="src/KeypadController.hpp"/>
+    <File Name="src/keypadListener.hpp"/>
+    <File Name="src/main.cpp"/>
+    <File Name="src/OLEDBoundary.cpp"/>
+    <File Name="src/OLEDBoundary.hpp"/>
+    <File Name="src/ReceiveListener.hpp"/>
+    <File Name="src/RunGameController.cpp"/>
+    <File Name="src/RunGameController.hpp"/>
+    <File Name="src/SpeakerController.cpp"/>
+    <File Name="src/SpeakerController.hpp"/>
+    <File Name="Makefile"/>
+  </VirtualDirectory>
+  <VirtualDirectory Name="libs">
+    <VirtualDirectory Name="hwlib">
+      <File Name="libs/hwlib/hwlib-adc.hpp"/>
+      <File Name="libs/hwlib/hwlib-all.hpp"/>
+      <File Name="libs/hwlib/hwlib-console.hpp"/>
+      <File Name="libs/hwlib/hwlib-dac.hpp"/>
+      <File Name="libs/hwlib/hwlib-db103.hpp"/>
+      <File Name="libs/hwlib/hwlib-defines.hpp"/>
+      <File Name="libs/hwlib/hwlib-demo.hpp"/>
+      <File Name="libs/hwlib/hwlib-doxygen.hpp"/>
+      <File Name="libs/hwlib/hwlib-due-system-sam3xa.hpp"/>
+      <File Name="libs/hwlib/hwlib-due.hpp"/>
+      <File Name="libs/hwlib/hwlib-font-default-16x16.hpp"/>
+      <File Name="libs/hwlib/hwlib-font-default-8x8.hpp"/>
+      <File Name="libs/hwlib/hwlib-glcd-5510.hpp"/>
+      <File Name="libs/hwlib/hwlib-glcd-oled.hpp"/>
+      <File Name="libs/hwlib/hwlib-graphics.hpp"/>
+      <File Name="libs/hwlib/hwlib-hc595.hpp"/>
+      <File Name="libs/hwlib/hwlib-hd44780.hpp"/>
+      <File Name="libs/hwlib/hwlib-i2c.hpp"/>
+      <File Name="libs/hwlib/hwlib-matrix-keypad.hpp"/>
+      <File Name="libs/hwlib/hwlib-ostream.hpp"/>
+      <File Name="libs/hwlib/hwlib-panic.cpp"/>
+      <File Name="libs/hwlib/hwlib-panic.hpp"/>
+      <File Name="libs/hwlib/hwlib-pcf8574a.hpp"/>
+      <File Name="libs/hwlib/hwlib-pcf8591.hpp"/>
+      <File Name="libs/hwlib/hwlib-pi.hpp"/>
+      <File Name="libs/hwlib/hwlib-pin-dummies.hpp"/>
+      <File Name="libs/hwlib/hwlib-pin.hpp"/>
+      <File Name="libs/hwlib/hwlib-port.hpp"/>
+      <File Name="libs/hwlib/hwlib-spi.hpp"/>
+      <File Name="libs/hwlib/hwlib-uno.hpp"/>
+      <File Name="libs/hwlib/hwlib-wait.hpp"/>
+      <File Name="libs/hwlib/hwlib.cpp"/>
+      <File Name="libs/hwlib/hwlib.hpp"/>
+    </VirtualDirectory>
+    <VirtualDirectory Name="rtos">
+      <File Name="libs/rtos/coroutine.cpp"/>
+      <File Name="libs/rtos/coroutine.hpp"/>
+      <File Name="libs/rtos/rtos.cpp"/>
+      <File Name="libs/rtos/rtos.hpp"/>
+      <File Name="libs/rtos/switch_to.hpp"/>
     </VirtualDirectory>
   </VirtualDirectory>
+  <Description/>
+  <Dependencies/>
   <Settings Type="Dynamic Library">
     <GlobalSettings>
       <Compiler Options="" C_Options="" Assembler="">
@@ -106,13 +95,13 @@
       </Linker>
       <ResourceCompiler Options=""/>
     </GlobalSettings>
-    <Configuration Name="Debug" CompilerType="Cross GCC ( arm-uclinuxeabi )" DebuggerType="GNU gdb debugger" Type="Dynamic Library" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
+    <Configuration Name="Debug" CompilerType="Cross GCC ( arm-linux-gnueabihf )" DebuggerType="GNU gdb debugger" Type="Dynamic Library" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
       <Compiler Options="-g" C_Options="-g" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="0">
         <IncludePath Value="."/>
       </Compiler>
       <Linker Options="" Required="yes"/>
       <ResourceCompiler Options="" Required="no"/>
-      <General OutputFile="" IntermediateDirectory="./Debug" Command="mingw32-make" CommandArguments="run" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
+      <General OutputFile="" IntermediateDirectory="./Debug" Command="$(WorkspacePath)\cmake-build-$(WorkspaceConfiguration)\output\$(ProjectName)" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
       <BuildSystem Name="CMake"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
@@ -125,15 +114,14 @@
       <PreBuild/>
       <PostBuild/>
       <CustomBuild Enabled="yes">
-        <Target Name="Load"/>
-        <RebuildCommand>mingw32-make clean build</RebuildCommand>
-        <CleanCommand>mingw32-make clean</CleanCommand>
-        <BuildCommand>mingw32-make build</BuildCommand>
+        <RebuildCommand/>
+        <CleanCommand>make clean</CleanCommand>
+        <BuildCommand>make</BuildCommand>
         <PreprocessFileCommand/>
         <SingleFileCommand/>
         <MakefileGenerationCommand/>
         <ThirdPartyToolName>None</ThirdPartyToolName>
-        <WorkingDirectory>$(ProjectPath)</WorkingDirectory>
+        <WorkingDirectory>$(WorkspacePath)</WorkingDirectory>
       </CustomBuild>
       <AdditionalRules>
         <CustomPostBuild/>
@@ -146,7 +134,7 @@
         <SearchPaths/>
       </Completion>
     </Configuration>
-    <Configuration Name="Release" CompilerType="Cross GCC ( arm-uclinuxeabi )" DebuggerType="GNU gdb debugger" Type="Dynamic Library" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
+    <Configuration Name="Release" CompilerType="Cross GCC ( arm-linux-gnueabihf )" DebuggerType="GNU gdb debugger" Type="Dynamic Library" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
       <Compiler Options="" C_Options="" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="0">
         <IncludePath Value="."/>
       </Compiler>
@@ -166,7 +154,7 @@
       <PostBuild/>
       <CustomBuild Enabled="yes">
         <RebuildCommand>mingw32-make clean build</RebuildCommand>
-        <CleanCommand>mingw32-make build clean</CleanCommand>
+        <CleanCommand>mingw32-make clean</CleanCommand>
         <BuildCommand>mingw32-make build</BuildCommand>
         <PreprocessFileCommand/>
         <SingleFileCommand/>
