--- a/Source/THO5/Lasergame/Lasergame.project
+++ b/Source/THO5/Lasergame/Lasergame.project
@@ -7,14 +7,11 @@
   </Plugins>
   <VirtualDirectory Name="src">
     <VirtualDirectory Name="ir">
-      <File Name="src/ir/game.cpp"/>
-      <File Name="src/ir/game.hpp"/>
       <File Name="src/ir/gameParameters.hpp"/>
       <File Name="src/ir/messageLogic.cpp"/>
       <File Name="src/ir/messageLogic.hpp"/>
       <File Name="src/ir/receiverController.cpp"/>
       <File Name="src/ir/receiverController.hpp"/>
-      <File Name="src/ir/runGame.hpp"/>
       <File Name="src/ir/transmitter.cpp"/>
       <File Name="src/ir/transmitter.hpp"/>
       <File Name="src/ir/transmitterController.cpp"/>
@@ -25,7 +22,6 @@
     <File Name="src/GameParamsController.hpp"/>
     <File Name="src/InitGameController.cpp"/>
     <File Name="src/InitGameController.hpp"/>
-    <File Name="src/KeyConsumer.h"/>
     <File Name="src/KeypadController.cpp"/>
     <File Name="src/KeypadController.hpp"/>
     <File Name="src/keypadListener.hpp"/>
@@ -38,6 +34,7 @@
     <File Name="src/SpeakerController.cpp"/>
     <File Name="src/SpeakerController.hpp"/>
     <File Name="Makefile"/>
+    <File Name="src/glcd_oled_part_buffered.hpp"/>
   </VirtualDirectory>
   <VirtualDirectory Name="libs">
     <VirtualDirectory Name="hwlib">
