--- a/Source/THO5/Lasergame/Lasergame.project
+++ b/Source/THO5/Lasergame/Lasergame.project
@@ -51,6 +51,8 @@
       <File Name="src/GameParamsController.hpp"/>
       <File Name="src/GameParamsController.cpp"/>
       <File Name="src/KeyConsumer.h"/>
+      <File Name="src/Player.hpp"/>
+      <File Name="src/Player.cpp"/>
     </VirtualDirectory>
     <VirtualDirectory Name="libs">
       <VirtualDirectory Name="hwlib">
