--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Source/THO5/cmake-build-Release/
 Source/THO5/.codelite/.tern-port
 Source/THO5/.codelite/THO5.tags
 Source/THO5/.codelite/refactoring.db
+#test
