--- a/Source/THO5/Lasergame/Lasergame.project
+++ b/Source/THO5/Lasergame/Lasergame.project
@@ -33,6 +33,7 @@
     <File Name="src/transmitterController.cpp"/>
     <File Name="src/transmitterController.hpp"/>
     <File Name="src/glcd_oled_part_buffered.hpp"/>
+    <File Name="Makefile"/>
   </VirtualDirectory>
   <VirtualDirectory Name="libs">
     <VirtualDirectory Name="hwlib">
